AIRDR-5: reject invalid configured package prices